# libkorpy

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
cmake/: libkorpy-config.cmake.in  utils.cmake
doc/: RELEASE_CHANGES.md
example/: calc.py  kordat
example/custom_output/: kordat
examples/: START.bat
examples/calc/: calc.py
examples/custom_output/: custom_output.py  kordat
examples/plot/: kordat  plot.py
libkorpy/: korpy.cpp  korpy.h  korpy_export.h  libkorpy.rc  py_to_cpp.cpp  resource.h
libs/alien/: alien.lib
tests/: CMakeLists.txt  START.bat  kordat
tests/data/: calc.py
tests/res/: calc.py  korlis  log_calc.txt  log_start.txt
tests/src/: korpy-test.cpp
